--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@babel/eslint-parser": "^7.14.7",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/tailwindcss": "^4.2.1",
     "@vue/test-utils": "^1.2.1",
+    "autoprefixer": "^10.3.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
     "eslint": "^7.29.0",
@@ -29,7 +31,9 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
     "jest": "^27.0.5",
+    "postcss": "^8.3.7",
     "prettier": "^2.3.2",
+    "tailwindcss": "^2.2.15",
     "vue-jest": "^3.0.4"
   }
 }
