--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "dependencies": {
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/axios": "^5.13.6",
+    "clipboard": "^2.0.8",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "prism-themes": "^1.9.0",
+    "prismjs": "^1.25.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
