--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clipboard": "^2.0.8",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "nuxt-gsap-module": "^1.4.0",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.25.0"
   },
