--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nuxtjs/color-mode": "^2.1.1",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/svg": "^0.2.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@vue/test-utils": "^1.2.1",
     "autoprefixer": "^10.3.5",
