--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/i18n": "^7.0.3",
     "@nuxtjs/sitemap": "^2.4.0",
     "clipboard": "^2.0.8",
     "core-js": "^3.15.1",
