--- a/static/api/projects.json
+++ b/static/api/projects.json
@@ -9,7 +9,7 @@
       { "name": "Stripe", "color": "#5E55F3" },
       { "name": "Maps", "color": "#de4033" }
     ],
-    "link": "https://github.com/gabrielcaiana/nlw-heat-vue"
+    "link": "https://github.com/gabrielcaiana/NuxtBnB"
   },
   {
     "cover": "/images/projects/nlw7.png",
@@ -63,10 +63,30 @@
     "link": "https://github.com/gabrielcaiana/myWebSite"
   },
   {
+    "cover": "/images/projects/gymManager.png",
+    "title": "GYM Manager",
+    "description": "A aplicação consiste em fazer o cadastro de instrutores e membros, aonde eles possam editar os dados e deletar o perfil, cada perfil cadastrado é listado na página principal e filtrar por perfis cadastrados.",
+    "technologies": [
+      { "name": "JavaScript", "color": "#E97B38" },
+      { "name": "Nunjucks", "color": "#15300E" },
+      { "name": "NodeJS", "color": "#88BA3D" },
+      { "name": "PostgreSQL", "color": "#306289" }
+
+    ],
+    "link": "https://github.com/gabrielcaiana/GymManager"
+  },
+  {
     "cover": "/images/projects/memoryGame.png",
     "title": "Memory Game",
     "description": "O jogo da memória é um clássico jogo formado por peças que apresentam uma figura em um dos lados. Caso as figuras sejam iguais, o participante deve recolher consigo esse par e jogar novamente.",
     "technologies": [{ "name": "JavaScript", "color": "#E97B38" }],
     "link": "https://jogo-da-memoria.gabrielcaiana.vercel.app/"
+  },
+  {
+    "cover": "/images/projects/hmtelecom.png",
+    "title": "HM Telecom",
+    "description": "Fundada em 2002, a HM Telecom lidera o segmento de OUTSOURCING em gestão e execuções de projetos, especializada em projetos turn- key, executamos nossos serviços em todo o território nacional.",
+    "technologies": [{ "name": "jQuery", "color": "#22A2D7" }],
+    "link": "https://hmtelecom.com.br/"
   }
 ]
