--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/i18n": "^7.0.3",
     "@nuxtjs/sitemap": "^2.4.0",
+    "@nuxtjs/vercel-builder": "^0.22.1",
     "clipboard": "^2.0.8",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
