--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/i18n": "^7.0.3",
+    "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "clipboard": "^2.0.8",
     "core-js": "^3.15.1",
