chore: config lint ts

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "yarn lint:js",
+    "lint": "eslint . --ext .ts",
     "jest": "jest",
     "jest:watch": "jest --watchAll"
   },
@@ -36,11 +36,13 @@
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/svg": "^0.2.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "@vue/test-utils": "^1.2.1",
     "autoprefixer": "^10.3.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
-    "eslint": "^7.29.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
