chore: install typescript

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,21 @@
     "@typescript-eslint"
   ],
   "extends": [
+    "@nuxtjs/eslint-config-typescript",
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
+  ],
+  "rules": {
+    "@typescript-eslint/explicit-module-boundary-types": "off"
+  },
+  "overrides": [
+    {
+      // enable the rule specifically for TypeScript files
+      "files": ["*.ts", "*.tsx"],
+      "rules": {
+        "@typescript-eslint/explicit-module-boundary-types": ["off"]
+      }
+    }
   ]
 }
