--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "nuxt": "^2.15.7",
     "nuxt-gsap-module": "^1.4.0",
     "prism-themes": "^1.9.0",
-    "prismjs": "^1.25.0"
+    "prismjs": "^1.25.0",
+    "vuex-module-decorators": "^1.0.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
