--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
+    "@vue/eslint-plugin": "^4.2.0",
     "@vue/test-utils": "^1.2.1",
     "autoprefixer": "^10.3.5",
     "babel-core": "7.0.0-bridge.0",
@@ -48,6 +49,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.12.1",
     "jest": "^27.0.5",
     "postcss": "^8.3.7",
