chore: create ngrok module

--- a/package.json
+++ b/package.json
@@ -32,10 +32,6 @@
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^7.12.1",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/svg": "^0.2.0",
@@ -44,8 +40,14 @@
     "autoprefixer": "^10.3.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
+    "chalk": "^5.0.0",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^7.12.1",
     "jest": "^27.0.5",
+    "ngrok": "^4.3.0",
     "postcss": "^8.3.7",
     "prettier": "^2.3.2",
     "tailwindcss": "^2.2.15",
