--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vuex-module-decorators": "^1.0.1"
   },
   "devDependencies": {
+    "@nuxt/image": "^0.6.0",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/color-mode": "^2.1.1",
