--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-analytics": "^2.4.0",
+    "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/svg": "^0.2.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@vue/test-utils": "^1.2.1",
