--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
+    "dev": "nuxi dev",
+    "build": "nuxi build",
+    "start": "nuxi preview",
+    "generate": "nuxi generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "eslint --ext .ts,.js,.vue .",
     "jest": "jest",
@@ -21,12 +21,13 @@
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
+    "nuxt-edge": "latest",
     "nuxt-gsap-module": "^1.4.0",
     "prism-themes": "^1.9.0",
     "vuex-module-decorators": "^1.0.1"
   },
   "devDependencies": {
+    "@nuxt/bridge": "npm:@nuxt/bridge-edge",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/color-mode": "^2.1.1",
@@ -37,6 +38,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/svg": "^0.2.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
+    "@vue/runtime-dom": "^3.2.31",
     "@vue/test-utils": "^1.2.1",
     "autoprefixer": "^10.3.5",
     "babel-core": "7.0.0-bridge.0",
