--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "dev": "nuxi dev",
     "build": "nuxi build",
     "start": "nuxi preview",
-    "generate": "nuxi generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "eslint --ext .ts,.js,.vue .",
     "jest": "jest",
     "jest:watch": "jest --watchAll"
   },
   "dependencies": {
-    "@nuxt/content": "^1.14.0",
+    "@nuxt/content": "^1.15.1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/gtm": "^2.4.0",
@@ -29,7 +28,7 @@
   "devDependencies": {
     "@nuxt/bridge": "npm:@nuxt/bridge-edge",
     "@nuxt/types": "^2.15.8",
-    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxt/webpack-builder": "^0.10.0",
     "@nuxtjs/color-mode": "^2.1.1",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
@@ -37,7 +36,7 @@
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/svg": "^0.2.0",
-    "@nuxtjs/tailwindcss": "^4.2.1",
+    "@nuxtjs/tailwindcss": "5.0.0-4",
     "@vue/runtime-dom": "^3.2.31",
     "@vue/test-utils": "^1.2.1",
     "autoprefixer": "^10.3.5",
@@ -49,11 +48,11 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.12.1",
+    "hookable": "^5.1.1",
     "jest": "^27.0.5",
     "ngrok": "^4.3.0",
     "postcss": "^8.3.7",
     "prettier": "^2.3.2",
-    "tailwindcss": "^2.2.15",
     "vue-jest": "^3.0.4"
   }
 }
