--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/svg": "^0.2.0",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "^18.7.16",
     "@vue/test-utils": "^1.2.1",
     "autoprefixer": "^10.4.8",
